# Astralis-Engine

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  convert_svg.py  imgui.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c-cpp.yml
assets/shaders/: asteroid.vert  basic.frag  particle.vert  planet.frag  ring.frag  ring.vert  skybox.vert  sun.frag
src/: main.cpp
src/core/: App.cpp  App.hpp  AsteroidBelt.cpp  AsteroidBelt.hpp  Camera.cpp  Camera.hpp  ConfigManager.cpp  ConfigManager.hpp  Geometry.cpp  Geometry.hpp  InputManager.cpp  InputManager.hpp  Moon.cpp  Moon.hpp  Noise.cpp  Noise.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Planet.cpp  Planet.hpp  PlanetManager.cpp  PlanetManager.hpp  PlanetaryRings.cpp  PlanetaryRings.hpp  Shader.cpp  Shader.hpp  SolarSystemManager.cpp  SolarSystemManager.hpp  Sun.cpp  Sun.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
